--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,28 +6,12 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      - name: Official SonarQube Scan
-    # You may pin to the exact commit or the version.
-    # uses: SonarSource/sonarqube-scan-action@069e3332cbefb8659c02d77b21a04719d3ef7c9b
-    uses: SonarSource/sonarqube-scan-action@v1.0.0
-    with:
-      # Additional arguments to the sonar-scanner
-      args: # optional
-      # Set the sonar.projectBaseDir analysis property
-      projectBaseDir: . # optional, default is .
+  name: Main Workflow
+  jobs:
+    sonarQubeTrigger:
+      name: SonarQube Trigger
+      runs-on: ubuntu-latest
+      steps:
+      - uses: actions/checkout@main
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v1.0.0
